# inventree_part_import

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  shell.nix  tasks.py
.github/workflows/: publish.yaml
inventree_part_import/: __init__.py  __main__.py  categories.py  cli.py  inventree_helpers.py  localization.py  part_importer.py  retries.py
inventree_part_import/config/: __init__.py  default_categories.yaml  default_parameters.yaml
inventree_part_import/suppliers/: __init__.py  base.py  scrape.py  supplier_digikey.py  supplier_lcsc.py  supplier_mouser.py  supplier_reichelt.py  supplier_tme.py
tests/: docker-compose.yaml  test_cli.py  test_retries.py
