[project]
name = "inventree-part-import"
version = "0.1.0"
description = "CLI to import parts from suppliers like DigiKey, LCSC, Mouser, etc. to InvenTree"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Bobbe", email = "mail@30350n.de" }]
dependencies = [
  "beautifulsoup4",
  "click",
  "cutie",
  "digikey-api>=1.0",
  "fake-useragent",
  "inventree>=0.12",
  "isocodes",
  "mouser>=0.1.5",
  "platformdirs",
  "pyyaml",
  "requests",
  "tablib",
  "thefuzz",
]

[project.urls]
Homepage = "https://github.com/30350n/inventree_part_import"

[project.scripts]
inventree-part-import = "inventree_part_import.cli:inventree_part_import"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".gitignore",
  ".gitmodules",
  ".pre-commit-config.yaml",
  "tests/",
  "tasks.py",
]

[tool.autopep8]
aggressive = 3
max_line_length = 96
ignore = "E12,E13,E201,E202,E221,E241,E261,E302,E305,E401,E402"
exclude = "site-packages"

[tool.isort]
line_length = 96
lines_after_imports = 1
force_sort_within_sections = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:fake_useragent.*"]
pythonpath = ["."]

[tool.codespell]
ignore-words-list = "leaded"
