[project]
name = "inventree-part-import"
version = "1.7-pre"
description = "CLI to import parts from suppliers like DigiKey, LCSC, Mouser, etc. to InvenTree"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
]
license = "MIT"
authors = [{ name = "Bobbe", email = "mail@30350n.de" }]
dependencies = [
  "beautifulsoup4",
  "click",
  "cutie",
  "digikey-api>=1.0",
  "fake-useragent",
  "inventree>=0.13.2",
  "isocodes",
  "mouser>=0.1.5",
  "platformdirs>=3.2.0",
  "pyyaml",
  "requests",
  "tablib[ods, xls, xlsx]",
  "thefuzz",
]

[project.urls]
Homepage = "https://github.com/30350n/inventree_part_import"

[project.scripts]
inventree-part-import = "inventree_part_import.cli:inventree_part_import"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".github/",
  ".gitignore",
  ".gitmodules",
  ".pre-commit-config.yaml",
  "tests/",
  "tasks.py",
]

[tool.autopep8]
aggressive = 3
max_line_length = 96
ignore = "E12,E13,E201,E202,E221,E241,E261,E302,E305,E401,E402"

[tool.isort]
line_length = 96
lines_after_imports = 1
combine_straight_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:fake_useragent.*"]
pythonpath = ["."]

[tool.codespell]
ignore-words-list = "leaded"
